[package]
name = "bevy_hilbert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
rand = "*"
rand_distr = "*"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#bevy = { version = "0.9", features = [] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#bevy = { version = "0.9", features = ["dynamic"] }
